--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,15 @@
   }
 }
 
+@utility text-gradient-primary {
+  background-image: linear-gradient(to right, #ffffff, var(--color-primary));
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-weight: 700;
+}
+
+
 :root {
   --radius: 0.65rem;
   --background: oklch(1 0 0);
